[package]
name = "phactory"
version = "0.0.1"
edition = "2018"
resolver = "2"

[dependencies]
log         = "0.4.14"
tracing = "0.1"
chrono      = "0.4.22"
base64      = "0.13.0"
num-bigint  = "0.4.0"
ring        = "0.16.20"
rand        = "0.8"
regex       = "1.5.5"
bitcoin     = { version = "0.29.2", features = ["serde"]}
bitcoin_hashes = { version = "0.11.0", default-features = false }

serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11.2"

hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
hex_fmt = "0.3"
anyhow = { version = "1.0.69", default-features = false }
thiserror = { version = "1.0", default-features = false }
itertools = { version = "0.10.1", default-features = false }

phala-trie-storage = { path = "../phala-trie-storage", default-features = false }
phala-mq = { path = "../phala-mq" }
phala-serde-more = { path = "../phala-serde-more" }

phala-crypto = { path = "../phala-crypto", features = ["getrandom", "stream"] }
prpc = { path = "../prpc" }
pink = { path = "../pink/runner", package = "pink-runner" }
pink-extension-runtime = { path = "../pink/pink-extension-runtime" }

sp-io                = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", features = ["disable_target_static_assertions"] }
sp-runtime           = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-externalities     = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-state-machine     = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
parity-scale-codec   = { package = "parity-scale-codec", version = "3.3", default-features = false, features = ["derive", "full", "chain-error"] }
scopeguard   = { version = "1.1", default-features = false }

# Phala specific
runtime = { path = "../../standalone/runtime", package = "phala-node-runtime", default-features = false, features = ["std"] }
phala-pallets = { path = "../../pallets/phala", default-features = false }
phala-types = { path = "../phala-types", default-features = false, features = ["enable_serde", "sgx"] }
phactory-api = { path = "./api", default-features = false }
phactory-pal = { path = "./pal", default-features = false }

# for light_validation
derive_more = "0.99.0"
hash-db = { version = "0.16.0", default-features = false }
num = { package = "num-traits", version = "0.2", default-features = false }
finality-grandpa = { version = "0.16.1", default-features = false, features = ["derive-codec"] }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0" }

fixed = "1.9.0"
fixed-sqrt = "0.2.4"
fixed-macro = "1.2"

glob = "0.3"
sidevm = { version = "0.1.0", package = "sidevm-host-runtime", path = "../sidevm/host-runtime" }
tokio = { version = "1", features = ["full"] }
bitflags = "1"
async-trait = "0.1.57"
phala-scheduler = { path = "../phala-scheduler" }
sgx-api-lite = { path = "../sgx-api-lite" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks", "trust-dns"] }
reqwest-env-proxy = { path = "../reqwest-env-proxy" }
libc = "0.2"

environmental = "1"
once_cell = "1"
im = "15"
scale-info = { version = "2.9", default-features = false, features = ["derive"] }

[dev-dependencies]
insta = "1.7.2"
rmp-serde = "1"
serde_path_to_error = "0.1.5"
ron = "0.8.0"
ciborium = "0.2.0"

[features]
default = [
    "sp-runtime-interface/disable_target_static_assertions",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
]
shadow-gk = []
gk-stat = []
