[package]
name = "phala-crypto"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-application-crypto = { path = "../../substrate/primitives/application-crypto", default-features = false }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "2.0", default-features = false }
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
aead = { version = "0.4.3", default-features = false, optional = true }
typenum = { version = "1.14.0", default-features = false, optional = true }
aead-io = { version = "0.1.2", optional = true }

[dev-dependencies]
rand = "0.7.3"
hex = "0.4"
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend", "getrandom"] }

[features]
default = [ "full_crypto" ]
std = []
getrandom = [ "schnorrkel/getrandom" ]
full_crypto = [
    "sp-core/full_crypto",
    "sp-application-crypto/full_crypto",
]

stream = [
    "std",
    "aead/std",
    "aead/stream",
    "aead-io",
    "typenum",
]

