[package]
name = "phala-crypto"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", default-features = false }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "2.0", default-features = false }
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
aead = { version = "0.4.3", default-features = false, optional = true }
typenum = { version = "1.14.0", default-features = false, optional = true }
aead-io = { version = "0.1.2", optional = true }

[dev-dependencies]
rand = "0.8.5"
hex = "0.4"
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend", "getrandom"] }

[features]
default = [ "full_crypto" ]
std = [ "aead/std" ]
getrandom = [ "schnorrkel/getrandom" ]
full_crypto = [
    "sp-core/full_crypto",
    "sp-application-crypto/full_crypto",
]

stream = [
    "std",
    "aead/stream",
    "aead-io",
    "typenum",
]

