[package]
name = "phala-mq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
hex = { version =  "0.4.3", default-features = false, features = ['alloc'] }
derive_more = { version = "0.99", default-features = false, features = ["display"] }
parity-scale-codec = { version = "2.3", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-core = { path = "../../substrate/primitives/core", default-features = false }

spin = { version = "0.9", default-features = false, features = ["mutex", "use_ticket_mutex"], optional = true }

[features]
default = ["dispatcher", "queue", "signers"]
dispatcher = ["spin"]
queue = ["spin"]
signers = ["sp-core/full_crypto"]
