[package]
name = "phala-node-rpc-ext"
version = "0.1.0"
edition = "2018"
authors = ["Phala Network"]
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[dependencies]
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }
thiserror = "1.0"
jsonrpc-derive = "18.0"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
impl-serde = "0.3"
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0" }
scale-info = { version = "2.0", default-features = false }

# primitives
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-api = { path = "../../substrate/primitives/api" }

# client dependencies
sc-client-api = { path = "../../substrate/client/api" }
sc-transaction-pool-api = { path = "../../substrate/client/transaction-pool/api" }
sc-rpc = { path = "../../substrate/client/rpc" }

phala-mq = { path = "../../crates/phala-mq", default-features = false }
phala-pallets = { path = "../../pallets/phala", default-features = false }
pallet-mq-runtime-api = { path = "../../pallets/phala/mq-runtime-api", default-features = false }
ext-types = { path = "./types", package = "phala-node-rpc-ext-types", default-features = false }
