[package]
description = "The task scheduler for Phala pruntime"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/phala-blockchain"
name = "phala-scheduler"
version = "0.1.0"
edition = "2021"


[dependencies]
rbtree = "0.1.5"
tokio = { version = "1", features = ["sync"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
