[package]
name = "phala-serde-more"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", default-features = false, features = ["derive", "alloc"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
scale = { package = "parity-scale-codec", version = "3.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
crypto = ["sp-core/full_crypto"]
std = [
    "sp-core/std",
]
