[package]
name = "phala-trie-storage"
version = "0.1.0"
edition = "2018"
authors = ["Phala Network"]
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[dependencies]
parity-scale-codec = { version = "3.3", default-features = false }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", features = ["full_crypto"] }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
hash-db = "0.16.0"
trie-db = "0.27.1"
im = { version = "15", features = ["serde"] }
rocksdb = "0.20"
librocksdb-sys = "0.10.0"
log = "0.4"
environmental = "1"
immutable_env = { version = "0.1.0", path = "../immutable_env" }
atomic = "0.5.3"
redb = "1"
ouroboros = "0.17"

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", features = ["full_crypto"] }
hash256-std-hasher = { version = "0.15", default-features = false }
hex = "0.4"
serde_json = "1.0"
impl-serde = "0.4.0"
keccak-hasher = "0.16.0"
serde_cbor = "0.11.2"
tempfile = "3"

[features]
default = ["serde"]
