[package]
name = "phala-types"
version = "0.3.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["full"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false, optional = true }

phala-trie-storage = { path = "../../crates/phala-trie-storage", default-features = false, optional = true }
phala-mq = { path = "../../crates/phala-mq", default-features = false }
prpc = { path = "../../crates/prpc", default-features = false }

[features]
default = ["std", "pruntime", "enable_serde"]
std = [
	"serde/std",
	"scale-info/std",
	"codec/std",
	"full_crypto",
	"sp-runtime/std",
	"sp-core/std",
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
	"scale-info/serde",
]
pruntime = [
	"sp-runtime",
	"phala-trie-storage",
]
sgx = [
	"full_crypto",
]
full_crypto = [
	"sp-core/full_crypto",
]
