[package]
name = "phaxt"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
parity-scale-codec = "3.0"
scale-info = '2.0'

subxt = { path = "../../subxt" }
phala-types = { path = "../phala-types" }
phala-node-rpc-ext-types = { path = "../phala-node-rpc-ext/types" }
