[package]
name = "phaxt"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
parity-scale-codec = "3.3"
scale-info = '2.3'
scale-encode = "0.3"
anyhow = "1"
tokio = "1"

subxt = { path = "../../subxt/subxt", features = ["jsonrpsee-ws"] }
phala-types = { path = "../phala-types" }
phala-node-rpc-ext-types = { path = "../phala-node-rpc-ext/types" }
phala-pallets = { path = "../../pallets/phala" }
jsonrpsee = "0.16.2"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
