[package]
name = "pink"
version = "0.1.0"
edition = "2018"

[dependencies]
sha2 = "0.9.6"
log = "0.4.14"
pallet-contracts = { path = "../../substrate/frame/contracts" }
pallet-contracts-primitives = { path = "../../substrate/frame/contracts/common" }
pallet-contracts-proc-macro = { path = "../../substrate/frame/contracts/proc-macro" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }
pallet-randomness-collective-flip = { path = "../../substrate/frame/randomness-collective-flip" }

frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-io = { path = "../../substrate/primitives/io" }
sp-std = { path = "../../substrate/primitives/std" }
sp-sandbox = { path = "../../substrate/primitives/sandbox" }
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-externalities = { path = "../../substrate/primitives/externalities" }

scale = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive", "serde", "decode"] }
parity-wasm = { version = "0.41.0", default-features = false }
pwasm-utils = { version = "0.16", default-features = false }
wasmi-validation = { version = "0.3.0", default-features = false }

paste = "1.0"
pretty_assertions = "0.7.2"
wat = "1.0"
call-trace = "*"
impl-serde = "0.3.1"
hex = "0.4.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.67"
phala-serde-more = { path = "../phala-serde-more" }

phala-trie-storage = { path = "../phala-trie-storage" }
phala-types = { path = "../phala-types" }
phala-crypto = { path = "../phala-crypto" }
pink-extension = { path = "pink-extension" }
http_req = { version = "0.8.1", default-features = false, features = ["rust-tls"] }
environmental = "1.1.3"

[dev-dependencies]
insta = "1.7.2"
hex-literal = "0.3.3"
