[package]
name = "pink"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.2"
log = "0.4.14"
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-contracts-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive", "serde", "decode"] }
parity-wasm = { version = "0.45.0", default-features = false }
wasmi-validation = { version = "0.5.0", default-features = false }

paste = "1.0"
wat = "1.0"
call-trace = "*"
impl-serde = "0.4.0"
hex = "0.4.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.67"
phala-serde-more = { path = "../phala-serde-more" }

phala-trie-storage = { path = "../phala-trie-storage" }
phala-types = { path = "../phala-types" }
phala-crypto = { path = "../phala-crypto" }
pink-extension = { path = "pink-extension" }
pink-extension-runtime = { path = "pink-extension-runtime" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks", "blocking"] }
reqwest-env-proxy = { path = "../reqwest-env-proxy" }
environmental = "1.1.3"

[dev-dependencies]
insta = "1.7.2"
hex-literal = "0.3.3"
env_logger = "0.9.0"
