[package]
name = "pkvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-trie = { path = "../../substrate/primitives/trie"}
rusty-leveldb = {git = "https://github.com/g302ge/leveldb-rs.git" }
hash-db = { version = "0.15.2", default-features = false }

[dev-dependencies]
sp-core = { path = "../../substrate/primitives/core" }