[package]
name = "pkvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-trie = { path = "../../substrate/primitives/trie"}
sp-std = { path = "../../substrate/primitives/std"}
rusty-leveldb = {git = "https://github.com/g302ge/leveldb-rs.git" }
hash-db = { version = "0.15.2", default-features = false }
environmental = "1.1.3"
parity-scale-codec = { version = "3.0", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
sp-core = { path = "../../substrate/primitives/core" }