[package]
name = "pkvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-trie = { path = "../../substrate/primitives/trie"}
sp-core = { path = "../../substrate/primitives/core"}
sp-std = { path = "../../substrate/primitives/std"}
sp-database = { path = "../../substrate/primitives/database"}
sp-storage = { path = "../../substrate/primitives/storage"}
rusty-leveldb = {git = "https://github.com/g302ge/leveldb-rs.git" }
hash-db = { version = "0.15.2", default-features = false }
parity-scale-codec = { version = "3.0", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
anyhow = "1.0"

[dev-dependencies]
sp-core = { path = "../../substrate/primitives/core" }