[package]
name = "podtracker"
version = "0.1.0"
edition = "2021"

[dependencies]
docker-api = "0.8.0"
anyhow = "1"
serde = "1"
rocket = "0.5.0-rc.1"
async-trait = "0.1.52"
prost = "0.8.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.3", features = ["derive"] }
prpc = { path = "../prpc" }
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["blocking"] }

[build-dependencies]
tera = "1.15.0"
tempdir = "0.3.7"
prpc-build = { path = "../prpc-build" }