[package]
name = "sgx-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
pink-json = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false }

# Release version no-std has bug
webpki = { git = "https://github.com/rustls/webpki", version = "=0.102.0-alpha.3", rev = "2ed9a4324f48c2c46ffdd7dc9d3eb315af25fce2", package = "rustls-webpki", default-features = false, features = [
    "alloc",
    "ring",
] }

anyhow = { version = "1", optional = true }
pem = { version = "3", optional = true }
x509-parser = { version = "0.15", optional = true }
asn1_der = { version = "0.7", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false }
urlencoding = { version = "2", optional = true }
const-oid = { version = "0.9", optional = true }


[dev-dependencies]
insta = "1"

[features]
default = ["std"]
std = [
    "pink-json/std",
    "scale-info/std",
    "serde/std",
    "scale/std",
    "anyhow",
    "reqwest",
    "urlencoding",
    "const-oid",
    "asn1_der",
    "pem",
    "x509-parser",
]
