[package]
name = "sgx-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
pink-json = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "serde"] }
const-oid = { version = "0.9.5", default-features = false }
der = { version = "0.7.8", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.2.4", default-features = false }
byteorder = { version = "1.5.0", default-features = false }

log = { version = "0.4.20", default-features = false }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
# Release version no-std has bug
webpki = { git = "https://github.com/rustls/webpki", rev = "2ed9a4324f48c2c46ffdd7dc9d3eb315af25fce2", version = "=0.102.0-alpha.3", package = "rustls-webpki", default-features = false, features = [
    "alloc",
    "ring",
] }

anyhow = { version = "1", optional = true }
pem = { version = "3", optional = true }
x509-parser = { version = "0.15", optional = true }
asn1_der = { version = "0.7", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false }
urlencoding = { version = "2", optional = true }
serde_json = { version = "1.0.108", optional = true, features = ["preserve_order"] }

[dev-dependencies]
insta = "1"

[features]
default = ["std"]
std = [
    "pink-json/std",
    "serde/std",
    "scale/std",
    "scale-info/std",
    "ring/std",
    "webpki/std",
    "const-oid/std",
    "serde_json",
    "anyhow",
    "reqwest",
    "urlencoding",
    "asn1_der",
    "pem",
    "x509-parser",
]
