[package]
name = "trie-storage"
version = "0.1.0"
edition = "2018"
authors = ["Phala Network"]
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[dependencies]
parity-scale-codec = "2.1"
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
sp-trie = { version = "3.0.0", path = "../../substrate/primitives/trie" }
sp-runtime = { version = "3.0.0", path = "../../substrate/primitives/runtime" }
sp-state-machine = { version = "0.9.0", path = "../../substrate/primitives/state-machine" }

[dev-dependencies]
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
impl-serde = "0.3"
