[package]
name = "trie-storage"
version = "0.1.0"
edition = "2018"
authors = ["Phala Network"]
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false, features = ["full_crypto"] }
sp-trie = { path = "../../substrate/primitives/trie", default-features = false }
sp-io   = { path = "../../substrate/primitives/io", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-state-machine = { path = "../../substrate/primitives/state-machine", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-application-crypto = { path = "../../substrate/primitives/application-crypto", default-features = false, features = ["full_crypto"] }
hash256-std-hasher = { version = "0.15", default-features = false }
hex = "0.4"
serde_json = "1.0"
impl-serde = "0.3"

[features]
default = ["serde"]
