[package]
name = "diem-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }
anyhow = { git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx.git" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx.git", default-features = false } # , features = ["clock"]
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx.git" }
itertools = { git = "https://github.com/mesalock-linux/rust-itertools-sgx.git", default-features = false }
once_cell = { git = "https://github.com/mesalock-linux/once_cell-sgx.git" }
# mirai-annotations = "1.10.1"
# proptest = { version = "0.10.1", default-features = false, optional = true }
# proptest-derive = { version = "0.2.0", default-features = false, optional = true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx.git", tag = "v0.7.3_sgx1.1.3" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
serde_bytes = { path = "../vendor/serde_bytes" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

bcs = { path = "../vendor/bcs" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
# diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0" }

[dev-dependencies]
regex = "1.4.3"
proptest = "0.10.1"
proptest-derive = "0.2.0"
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }

diem-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }
diem-network-address = { path = "../network/network-address", version = "0.1.0", features = ["fuzzing"] }
diem-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0" }
move-core-types = { path = "../language/move-core/types", version = "0.1.0", features = ["fuzzing"]  }

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
fuzzing = [] # ["proptest", "proptest-derive", "diem-proptest-helpers", "diem-crypto/fuzzing", "diem-network-address/fuzzing", "move-core-types/fuzzing"]
